--- a/.github/workflows/update-tree.yml
+++ b/.github/workflows/update-tree.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - '**'
 
+permissions:
+  contents: write  # 🔥 importante: permite a la acción hacer commit/push
+
 jobs:
   update-tree:
     runs-on: ubuntu-latest
@@ -12,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install tree
-        run: sudo apt-get install -y tree
+        run: sudo apt-get update && sudo apt-get install -y tree
 
       - name: Generate repo tree
         run: |
